--- a/trabalhos.html
+++ b/trabalhos.html
@@ -13,31 +13,31 @@
                 <div class="slaca-titulo">
                     <h2>SLACA 2019</h2>
                 </div>
-                <br>
+                <!-- <br> -->
                 <div>
                     <img id="logo" src="./imagens/logo.png" alt="13 Slaca">
                 </div>
-                <div>
+                <div class ="link1">
                     <a href="apresentacao.html">Apresentação</a>
-                    <hr>
-                </div>
-                <div>
+                    <!-- <hr> -->
+                </div> 
+                <div class ="links">
                     <a href="comites.html">Comitês</a>
-                    <hr>
+                   <!--  <hr> -->
                 </div>    
-                <div>
+                <div class ="links">
                     <a href="autores.html">Autores</a>
-                    <hr>
+                   <!--  <hr> -->
                 </div>
-                <div>
+                <div class ="links">
                     <a href="eixostematicos.html">Eixos temáticos</a>
-                    <hr>
+                   <!--  <hr> -->
                 </div>
                 <div class = "opcao-selecionada">
                     <a href="trabalhos.html">Trabalhos</a>
-                    <hr>
+                    <!-- <hr> -->
                 </div>
-                <div>
+                <div class ="links">
                     <a href="contato.html">Contato</a>
                 </div>
                 <br> <br> <br> <br>
@@ -266,12 +266,12 @@
                                 <div style="margin-left: 0px;">
                                     <label class="label">Assunto</label>
                                     <br>
-                                    <input type="text" name="assunto" id="assunto" placeholder="Defina um tópico sucinto para notificar os autores...">
+                                    <input type="text" name="assunto" id="assunto" placeholder="Defina um tópico sucinto para notificar os autores..." required>
                                 </div>
                                 <div>
                                     <label class ="label">Conteúdo</label>
                                     <br>
-                                    <textarea id="conteudo" name="experiencia" data-toggle=""></textarea> 
+                                    <textarea id="conteudo" name="experiencia" data-toggle="" required></textarea> 
                                     <br>
                                     <div class ="div-botao-formulario">
                                         <button class="botao-formulario" type="button" onclick="enviaFeedback()">Enviar</button>
